--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -8,7 +8,12 @@ body{
 
     margin-bottom: 32px;
  
+}
 
+
+a{
+    text-decoration: none;
+    color: white;
 }
 
 .nav-wrap{
@@ -56,21 +61,28 @@ body{
     }
     .right-nav{
         display: flex;
+        
  
         width: 20%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 13%;
+        justify-content: end;
+        align-items: end;
+     
+      
         .country{
+    
             display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 8px;
+            flex-direction: column;
+            align-items: end;
+            justify-content: end;
+            gap: 2px;
+            font-size: small;
         }
     }
 }
 
+.lists-wrap li a:hover {
+    color: gray;
+}
 
 
 #mega1{
@@ -100,32 +112,34 @@ body{
         }
     }
     .lists-wrap{
+        font-size: larger;
         margin: 5%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 20px;
     
     }
 }
 
-#mega2{
-    width: 100%;
-    height: 80vh;
+#tech-drop{
+    width: 16%;
+    height: 50vh;
     position: absolute;
-    left: 0;
+    left:650px;
     right: 0;
     z-index: 999;
     display: none;
-    padding: 5%;
     margin-top: 3vh;
+    padding-top: 30px;
+ 
     
 }
 
-#mega2 {
+#tech-drop {
+
     .title{
         display: flex;
-        gap: 12px;
         font-size: medium;
- 
         align-items: center;
         button{
             width: 25px;
@@ -134,14 +148,100 @@ body{
         }
     }
     .lists-wrap{
-        margin: 5%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+       
     
+        li{
+          
+            height: 40px;
+        }
+       
+    }
+}
+
+#industries-drop{
+    width: 16%;
+    height: 50vh;
+    position: absolute;
+    left:800px;
+    right: 0;
+    z-index: 999;
+    display: none;
+    margin-top: 3vh;
+    padding-top: 30px;
+ 
+    
+}
+
+#industries-drop {
+
+    .title{
+        display: flex;
+        font-size: medium;
+        align-items: center;
+        button{
+            width: 25px;
+            height: 25px;
+            background-color: $secondary-color;
+        }
+    }
+    .lists-wrap{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+       
+    
+        li{
+          
+            height: 40px;
+        }
+       
     }
 }
 
 
+
+#insights-drop{
+    width: 16%;
+    height: 50vh;
+    position: absolute;
+    left:920px;
+    right: 0;
+    z-index: 999;
+    display: none;
+    margin-top: 3vh;
+    padding-top: 30px;
+ 
+    
+}
+
+#insights-drop {
+
+    .title{
+        display: flex;
+        font-size: medium;
+        align-items: center;
+        button{
+            width: 25px;
+            height: 25px;
+            background-color: $secondary-color;
+        }
+    }
+    .lists-wrap{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+       
+    
+        li{
+          
+            height: 40px;
+        }
+       
+    }
+}
 
 .hero-text-wrap{
     position: relative;
@@ -323,3 +423,108 @@ video{
         }
     }
 }
+
+.horizontal{
+
+    max-height: 60vh;
+    display: flex;
+    overflow-x: auto;
+
+    margin-top: 4%;
+
+    
+.item{
+
+    height: 60vh;
+    display: flex;
+
+    image{
+        width: 500px;
+    }
+    .content{
+        width: 600px;
+        padding: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        gap: 10px;
+        div{
+            display: flex;
+            gap: 12px;
+            button{
+                width: 25px;
+                height: 25px;
+                border: none;
+                background-color: $secondary-color;
+            }
+
+        }
+
+        
+    }
+}
+
+}
+.horizontal::-webkit-scrollbar {
+    display: none; /* Chrome, Safari: hides scrollbar */
+}
+
+
+.hr-btn{
+    width: 100%;
+    display: flex;
+    justify-content:center;
+    margin-top: 2%;
+    margin-bottom: 10%;
+    gap: 3%;
+    button{
+        width: 40px;
+        height: 40px;
+        border: none;
+        background-color: $secondary-color;
+    }
+}
+
+footer{
+    margin-top: 5%;
+    display: flex;
+    height: 50vh;
+
+    .left{
+    
+
+        width: 50%;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+    
+        h1{
+            padding-bottom: 10%;
+        }
+        ul{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            list-style-type: none;
+            row-gap: 30%;
+
+   
+
+        }
+        h3{
+            
+            padding-top: 28%;
+            font-size: smaller;
+        }
+    }
+    .img{
+        width: 50%;
+        height: 50vh;
+        background-image: url('/assets/footer-img.png');
+        background-size: cover; 
+        
+        background-repeat: no-repeat; 
+    }
+}
+
+
+
