--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -342,7 +342,7 @@ video{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('/assets/1.png');
+        background-image: url('/assets/samp.png');
     }
     .two{
         background-size: cover;
