--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -367,7 +367,8 @@ video{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('/assets/5.png');
+        background-image: url('/apex.github.io/assets/5.png');
+;
     }
     .six{
         background-size: cover;
