--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -342,13 +342,13 @@ video{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('assets/samp.png');
+        background-image: url('/assets/1.png');
     }
     .two{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('assets/2.png');
+        background-image: url('/assets/2.png');
     }
     .three{
         background-color: white;
@@ -367,8 +367,7 @@ video{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('/apex.github.io/assets/5.png');
-;
+        background-image: url('/assets/5.png');
     }
     .six{
         background-size: cover;
