--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -385,7 +385,7 @@ video{
         background-size: cover;
         background-position: center; 
         background-repeat: no-repeat;
-        background-image: url('/assets/8.png');
+        background-image: url('/apex.github.io/assets/8.png');
     }
     
 }
