--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,12 @@
   }
 
   @import "config";
-  @import "index";
+
+
   @import "about";
+  @import "theme";
+ 
   @import "subpages";
+  @import "index";
+ 
  
