--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,16 +1,16 @@
 .sub-menu{
     display: flex;
     background-color: $secondary-color;
-    margin-left: -56px;
-    margin-right: -56px;
+    margin-left: -100px;
+    margin-right: -100px;
     height: 8vh;
     align-items: center;
-    margin-top: 10%;
+   
     margin-bottom: 6%;
 
     
     h2{
-        padding-left: 5%;
+        padding-left: 8%;
         width: 30%;
     }
    
@@ -20,6 +20,7 @@
         width: 65%;
         justify-content: end;
         align-items: center;
+        padding-right: 8%;
       
         text-decoration: none;
         li{
@@ -382,6 +383,8 @@
    
         margin-left: -56px;
         margin-right: -56px;
+        position: relative;
+        top: 4vh;
 
 
         align-items: center;
@@ -516,7 +519,7 @@
 
     .story{
         font-size: 12px;;
-        text-align: justify;
+        text-align: left;
         h1{
             font-size: 32px;
             margin-bottom: 5%;
@@ -530,21 +533,27 @@
 
 @media (min-width: 320px) and (max-width: 530px) {   
     .sub-menu{
+        position: relative;
+        top: 4vh;
+        margin-bottom: 30px;
       
    
         margin-left: -56px;
         margin-right: -56px;
+        height: 6vh;
 
 
         align-items: center;
 
         h2{
-            padding-left: 10%;
-            width: 30%;
-            font-size: 16px;
+            padding-left: 15%;
+            width: 50%;
+         
+            font-size: 12px;
         }
        
         ul{
+          
             margin-right: 10px;
             display: flex;
             gap: 5%;
@@ -560,6 +569,7 @@
 
                 text-align: center;
                 list-style-type: none;
+            
               
       
             }
@@ -607,9 +617,9 @@
 
     .story{
         font-size: 10px;;
-        text-align: justify;
+        text-align: left;
         h1{
-            font-size: 32px;
+            font-size: 28px;
             margin-bottom: 5%;
         }
 
@@ -723,4 +733,62 @@
         }
     }
 
+       .subp-menu {
+        position: relative;
+        top: 6vh;
+        display: flex;
+        align-items: center; /* Align items vertically */
+        justify-content:start;
+        height: 6vh;
+        padding: 0 1rem;
+        background-color: $secondary-color;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        
+        ul {
+            display: none;
+        }
+    
+        h2 {
+            display: flex;
+            font-size: 12px;
+            width: fit-content;
+          
+        
+            text-align: left;
+            margin: 0;
+            padding-left: 17%;
+            padding-top: 5px;
+        }
+    
+        button {
+            
+            display: block!important;
+            display: relative;
+            
+            
+            background-color: $secondary-color;
+            color: white;
+            border: none;
+            margin-left: 10px; /* Add some spacing between h2 and button */
+        }
+    
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            gap: 1.5rem;
+            padding-right: 6%;
+            font-size: 12px;
+            
+            li {
+                display: none;
+            }
+        }
+    
+        a {
+            text-decoration: none;
+        }
+    }
+
 }
+
